logs/Slang/generated/yosys/asicworld_code_hdl_models_half_adder_gates.sv.log
name: asicworld_code_hdl_models_half_adder_gates
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_half_adder_gates.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_half_adder_gates.v:11:1: error: expected member
and U_carry (carry,x,y);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_half_adder_gates.v:12:1: error: expected member
xor U_sum (sum,x,y);
^~~
